--- a/src/Bai2/style.css
+++ b/src/Bai2/style.css
@@ -1,5 +1,5 @@
 body {
-background-image: url('../../public/glassesImage/background.jpg')
+/* background-image: url('../../public/glassesImage/background.jpg') */
 
 }
 
