--- a/src/MovieTicket/Style.css
+++ b/src/MovieTicket/Style.css
@@ -75,11 +75,15 @@ left: -50px;
 }
 .listCol h5 {
     font-size: 30px;
+    margin:5px 0 ;
 }
 
 .col-1{
 position: relative;
 bottom: 
-440px;
+460px;
 left:5px;
+}
+body {
+background-image:  url('../../public/img/Ảnh\ màn\ hình\ 2023-11-20\ lúc\ 00.26.24.png');
 }
